syntax ="proto3";
import  "pb_com/common.proto";
import  "pb_user/user.proto";
package pb_auth;
option go_package = "./auth;pb_auth";

//message CommonResp {
//  int32 code = 1;
//  string msg = 2;
//}

message UserRegisterReq {
  string szk_id = 1; // 账户ID
  string nickname = 2; // 昵称
  string avatar_url = 3; // 头像
  string mobile = 4; // 手机号
  int32  platform_id = 5; // 平台
  string  udid = 6; // 设备唯一编号
  string verification_code = 7; // 验证码
  string password = 8; // 密码

}

message UserRegisterResp {
  pb_com.CommonResp common = 1;
  pb_user.UserInfo user_info = 2;
  UserToken  token = 3;
}

message UserTokenReq {
  int32  platform_id = 1; // 平台
  int64  id = 2; // 主键ID
  string user_id = 3; // 用户ID
}

message UserTokenResp {
  pb_com.CommonResp common = 1;
  string token = 2; // 用户token
  int64  expire = 3; // token过期时间戳（秒）
}

message UserLoginReq {
  int32  platform_id = 1; // 平台
  string login_id = 2; // 用户登录ID
  string password = 3; // 密码
  string verification_code = 4; // 验证码
  int32 login_type = 5; // 1:szk_id登录
}

message UserToken {
  string token = 1; // 用户token
  int64  expire = 2; // token过期时间戳（秒）
}

message UserLoginResp {
  pb_com.CommonResp common = 1;
  pb_user.UserInfo user_info = 2;
  UserToken  token = 3;
}

service Auth {
  rpc UserRegister(UserRegisterReq) returns(UserRegisterResp);
  rpc UserToken(UserTokenReq) returns(UserTokenResp);
  rpc UserLogin(UserLoginReq) returns(UserLoginResp);
}
