syntax ="proto3";
package pb_com;
option go_package = "suzaku/pkg/proto/pb_com;pb_com";

// 共用代码
message CommonResp {
  int32 code = 1;
  string msg = 2;
}

enum RPC_ACTION_TYPE
{
  RPC_ACTION_TYPE_NONE = 0;
  ADD = 1; // 添加
  UPDATE = 2; // 更新
  DELETE = 3; // 删除
}
